tests/NormalTests/paczka1/fuzzy1/36854230.err
Error in line 1: 7GS7kMZH A967 89,51
Error in line 9: UPzvI A967 z3,9
Error in line 21: UP4vI A967 93,1
Error in line 13: 7GS7kMZH A967 15,1
